# lamaniads

./: .env.example  .gitignore  .npmrc  IMPLEMENTATION_PLAN.md  PRD.md  approve-builds.exp  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.trae/: mcp.json
.trae/documents/: campaign-creation-wizard-plan.md  google_ads_campaign_builder_plan.md  google_ads_campaign_view_plan.md  meta_ads_management_plan.md  preview_client_comments_plan.md
.trae/skills/cloudflare-pages-deploy/: SKILL.md
.trae/skills/lamani-brand-design/: SKILL.md
.vercel/: project.json
apps/api/: pyproject.toml  test_meta.py
apps/api/alembic/: env.py
apps/api/src/: main.py
apps/api/src/api/: auth_platforms.py  campaigns.py  deps.py
apps/api/src/core/: adapters.py  config.py  google_adapter.py  meta_adapter.py  security.py  supabase_client.py  test_adapters.py  test_vault.py  vault.py
apps/api/src/db/: base.py  repository.py  session.py
apps/api/src/lamani_ads_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/schemas/: drafts.py
apps/api/src/workers/: sync_worker.py  test_sync.py
apps/mcp-server/: package.json
apps/web/: middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  wrangler.toml
infra/compose/: compose.dev.yml
scripts/dev/: bootstrap.sh
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: add_account_info_to_platform_connections.sql  campaign_draft_comments.sql  campaign_drafts.sql  grant_service_role_campaign_drafts.sql
supabase/supabase/: config.toml
(+46 files in other folders)
