[project]
name = "lamani-ads-api"
version = "0.1.0"
description = "FastAPI backend api for LamaniAds unified ads control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "structlog>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1"
]
